# ex7_reversi

./: .gitignore  CMakeLists.txt
exe/: client.out  server.out  server_configuration.ini
src/client/: makefile
src/client/gtest_src/googletest-release-1.8.0/googlemock/include/gmock/: gmock.h
src/client/gtest_src/googletest-release-1.8.0/googlemock/scripts/: upload.py  upload_gmock.py
src/client/gtest_src/googletest-release-1.8.0/googlemock/scripts/generator/cpp/: tokenize.py
src/client/gtest_src/googletest-release-1.8.0/googlemock/src/: gmock.cc
src/client/gtest_src/googletest-release-1.8.0/googlemock/test/: gmock_output_test.py  gmock_test_utils.py
src/client/gtest_src/googletest-release-1.8.0/googletest/include/gtest/: gtest.h  gtest_pred_impl.h
src/client/gtest_src/googletest-release-1.8.0/googletest/include/gtest/internal/: gtest-port.h
src/client/gtest_src/googletest-release-1.8.0/googletest/samples/: sample10_unittest.cc  sample9_unittest.cc
src/client/gtest_src/googletest-release-1.8.0/googletest/scripts/: common.py  fuse_gtest_files.py  gen_gtest_pred_impl.py  pump.py  upload_gtest.py
src/client/gtest_src/googletest-release-1.8.0/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
src/client/gtest_src/googletest-release-1.8.0/googletest/test/: gtest_break_on_failure_unittest.py  gtest_filter_unittest.py  gtest_help_test.py  gtest_list_tests_unittest.py  gtest_output_test.py  gtest_pred_impl_unittest.cc  gtest_shuffle_test.py  gtest_test_utils.py  gtest_throw_on_failure_test.py  gtest_uninitialized_test.py  gtest_unittest.cc
src/client/gtest_src/googletest-release-1.8.0/googletest/xcode/Scripts/: versiongenerate.py
src/client/include/: AIPlayer.h  Board.h  ClassicLogic.h  Client.h  ClientConfigParser.h  ConsolePrinter.h  Convert.h  HumanPlayer.h  LocalPlayer.h  Logic.h  Player.h  PlayerColor.h  Position.h  Printer.h  RemotePlayer.h  ReversiGame.h
src/client/src/: AIPlayer.cpp  Board.cpp  ClassicLogic.cpp  Client.cpp  ClientConfigParser.cpp  ConsolePrinter.cpp  Convert.cpp  HumanPlayer.cpp  LocalPlayer.cpp  Logic.cpp  Position.cpp  RemotePlayer.cpp  ReversiGame.cpp  main.cpp
src/client/test/: AIPlayerTest.cpp  BoardStates.h  BoardTest.cpp  ClassicLogicTest.cpp  main.cpp
src/server/: makefile
src/server/include/: ClientHandler.h  Command.h  CommandJoin.h  CommandListGames.h  CommandManager.h  CommandStart.h  Communication.h  ConsoleServerPrinter.h  Convert.h  Game.h  GameManager.h  Server.h  ServerConfigParser.h  ServerPrinter.h  Task.h  ThreadPool.h
src/server/src/: ClientHandler.cpp  CommandJoin.cpp  CommandListGames.cpp  CommandManager.cpp  CommandStart.cpp  Communication.cpp  ConsoleServerPrinter.cpp  Convert.cpp  Game.cpp  GameManager.cpp  Server.cpp  ServerConfigParser.cpp  ThreadPool.cpp  main.cpp
